--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="white">#ffffff</color>
     <color name="colorAccent">#FF4081</color>
     <color name="darkGray">#6c6c6c</color>
+    <color name="blue">#3700B3</color>
+    <color name="purple">#6200EE</color>
 </resources>
