--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -36,108 +36,95 @@
 
         tools:ignore="MissingClass,UnknownId" />
 
-    <Button
-        android:id="@+id/main_join_now_btn"
-        android:layout_width="325dp"
+    <EditText
+        android:id="@+id/kp_register_name"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="336dp"
+        android:layout_below="@+id/profile_image"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/input_design"
-        android:padding="1dp"
-        android:text="@string/driver_name"
-        android:textAllCaps="false"
-        android:textColor="#FBF8FB"
-        android:textSize="24sp"
-        android:textStyle="bold"></Button>
+        android:hint="Name"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/main_join_now1_btn"
-        android:layout_width="325dp"
+    <EditText
+        android:id="@+id/kp_register_Phoneno"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="277dp"
+        android:layout_below="@+id/profile_image"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/input_design"
-        android:padding="1dp"
-        android:text="@string/driver_phoneno"
-        android:textAllCaps="false"
-        android:textColor="#FAF6F6"
-        android:textSize="24sp"
-        android:textStyle="bold"></Button>
+        android:hint="Phone Number"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/main_join_now2_btn"
-        android:layout_width="325dp"
+    <EditText
+        android:id="@+id/kp_register_vehicaltype"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="220dp"
+        android:layout_below="@+id/profile_image"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/input_design"
-        android:padding="1dp"
-        android:text="@string/driver_vehicle_type"
-        android:textAllCaps="false"
-        android:textColor="#FAF6F6"
-        android:textSize="24sp"
-        android:textStyle="bold"></Button>
+        android:hint="Vehical Type"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/main_join_now3_btn"
-        android:layout_width="325dp"
+    <EditText
+        android:id="@+id/kp_register_email"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="160dp"
+        android:layout_below="@+id/profile_image"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/input_design"
-        android:padding="1dp"
-        android:text="@string/driver_Email"
-        android:textAllCaps="false"
-        android:textColor="#FAF6F6"
-        android:textSize="24sp"
-        android:textStyle="bold"></Button>
+        android:hint="Email"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/main_join_now4_btn"
-        android:layout_width="325dp"
+    <EditText
+        android:id="@+id/kp_register_password"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="105dp"
+        android:layout_below="@+id/profile_image"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="260dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/input_design"
-        android:padding="1dp"
-        android:text="@string/driver_password"
-        android:textAllCaps="false"
-        android:textColor="#F4F0F4"
-        android:textSize="24sp"
-        android:textStyle="bold"></Button>
+        android:hint="password"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
 
-    <Button
+
+
+     <Button
         android:id="@+id/delete_btn"
         android:layout_width="205dp"
         android:layout_height="wrap_content"
