--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F4EFEF"
+    android:background="#807575"
     tools:context=".MainActivity3">
 
     <TextView
@@ -36,85 +36,78 @@
 
         tools:ignore="MissingClass,UnknownId" />
 
-    <Button
-        android:id="@+id/main_join_now_btn"
-        android:layout_width="325dp"
+    <EditText
+        android:id="@+id/kp_profile_name"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="334dp"
+        android:layout_below="@+id/profile_image"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/input_design"
-        android:padding="1dp"
-        android:text="@string/driver_register_name"
-        android:textAllCaps="false"
-        android:textColor="#050505"
-        android:textSize="30sp"
-        android:textStyle="bold"></Button>
+        android:hint="Name"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        tools:text="@string/driver_register_name" />
 
-    <Button
-        android:id="@+id/main_join_now1_btn"
-        android:layout_width="325dp"
+    <EditText
+        android:id="@+id/kp_regist_Phoneno"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="277dp"
+        android:layout_below="@+id/profile_image"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/input_design"
-        android:padding="1dp"
-        android:text="@string/driver_register_phoneno"
-        android:textAllCaps="false"
-        android:textColor="#0C0C0C"
-        android:textSize="30sp"
-        android:textStyle="bold"></Button>
+        android:hint="Phone Number"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        tools:text="@string/driver_register_phoneno" />
 
-    <Button
-        android:id="@+id/main_join_now2_btn"
-        android:layout_width="325dp"
+    <EditText
+        android:id="@+id/kp_register_vehicaltype"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="220dp"
+        android:layout_below="@+id/profile_image"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/input_design"
-        android:padding="1dp"
+        android:hint="Vehical Type"
+        android:inputType="text"
+        android:padding="12dp"
         android:text="@string/driver_register_vehicle_type"
-        android:textAllCaps="false"
-        android:textColor="#121111"
-        android:textSize="30sp"
-        android:textStyle="bold"></Button>
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/main_join_now3_btn"
-        android:layout_width="325dp"
+    <EditText
+        android:id="@+id/kp_register_email"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="160dp"
+        android:layout_below="@+id/profile_image"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/input_design"
-        android:padding="1dp"
+        android:hint="Email"
+        android:inputType="text"
+        android:padding="12dp"
         android:text="@string/driver_register_email"
-        android:textAllCaps="false"
-        android:textColor="#131313"
-        android:textSize="24sp"
-        android:textStyle="bold"></Button>
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="17sp"
+        android:textStyle="bold" />
+
 
     <Button
         android:id="@+id/update_btn"
@@ -129,7 +122,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="91dp"
         android:layout_marginRight="15dp"
-        android:layout_marginBottom="95dp"
+        android:layout_marginBottom="80dp"
         android:background="@drawable/buttons"
         android:padding="10dp"
         android:text="Update"
@@ -151,7 +144,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="91dp"
         android:layout_marginRight="15dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/buttons"
         android:padding="10dp"
         android:text="Delete"
@@ -168,6 +161,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="195dp"
         android:text="Change profile picture"
+        android:textColor="#121111"
         android:textStyle="bold" />
 
 
