--- a/app/src/main/res/layout/activity_main5.xml
+++ b/app/src/main/res/layout/activity_main5.xml
@@ -21,47 +21,43 @@
         android:textSize="36sp"
         android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/main_join_now_btn"
-        android:layout_width="325dp"
+    <EditText
+        android:id="@+id/kp_login_email"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="355dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="280dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/input_design"
-        android:padding="20dp"
-        android:text="@string/driver_login_email"
-        android:textAllCaps="false"
-        android:textColor="#FAF6F6"
-        android:textSize="30sp"
-        android:textStyle="bold"></Button>
+        android:hint="Email"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/main_login_btn"
-        android:layout_width="316dp"
+
+    <EditText
+        android:id="@+id/kp_login_password"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="44dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="213dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="340dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/input_design"
-        android:padding="20dp"
-        android:text="@string/driver_login_password"
-        android:textAllCaps="false"
-        android:textColor="#F7FDF3F3"
-        android:textSize="30sp"
-        android:textStyle="bold"></Button>
+        android:hint="Password"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="17sp"
+        android:textStyle="bold" />
+
+
+
+
+
 
     <TextView
         android:id="@+id/textView12"
