--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="darkGray">#6c6c6c</color>
     <color name="blue">#3700B3</color>
     <color name="purple">#6200EE</color>
+    <color name="black">#121111</color>
 </resources>
