--- a/app/src/main/res/layout/activity_extend_photography.xml
+++ b/app/src/main/res/layout/activity_extend_photography.xml
@@ -30,11 +30,11 @@
             android:layout_height="44dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
-            android:background="#795548"
-            android:text="Enter to See booking Details"
+            android:background="@color/colorPrimary"
+            android:text="Press to See booking Details"
             android:textColor="@color/white"
             android:textSize="19sp"
-            android:textStyle="bold"
+            android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -139,30 +139,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:hint="Most preffered time of the day (Please update the time)"
-            android:textColorHint="#000000"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText7" />
-
-        <EditText
-            android:id="@+id/editText4"
-            android:layout_width="375dp"
-            android:layout_height="29dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
-            android:background="#12070000"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:paddingStart="12dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
         <TextView
             android:id="@+id/textView6"
@@ -174,7 +150,7 @@
             android:textColorHint="#000000"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText4" />
+            app:layout_constraintTop_toBottomOf="@+id/editText7" />
 
         <EditText
             android:id="@+id/editText8"
@@ -190,31 +166,6 @@
             app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
         <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:text="Date to start (Please update the date)"
-            android:textColor="#000000"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText8" />
-
-        <EditText
-            android:id="@+id/editTextDate"
-            android:layout_width="375dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:background="#12070000"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:paddingStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
-        <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -224,7 +175,7 @@
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
+            app:layout_constraintTop_toBottomOf="@+id/editText8" />
 
         <EditText
             android:id="@+id/editText5"
@@ -239,30 +190,94 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
+        <TextView
+            android:id="@+id/extend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="----------------------------Extending details----------------------------"
+            android:textColor="#72000000"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editText5" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="Date to start (Please update the date)"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/extend" />
+
+        <EditText
+            android:id="@+id/editTextDate"
+            android:layout_width="375dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:background="#12070000"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:paddingStart="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:hint="Most preffered time of the day (Please update the time)"
+            android:textColorHint="#000000"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
+
+        <EditText
+            android:id="@+id/editText4"
+            android:layout_width="375dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
+            android:background="#12070000"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:paddingStart="12dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+
         <Button
             android:id="@+id/button"
             android:layout_width="180dp"
             android:layout_height="51dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
-            android:background="#795548"
             android:text="Extend"
-            android:textColor="@color/white"
-            android:textSize="19sp"
-            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="18dp"
+            android:background="#F8F5F5"
+            android:textStyle="italic|bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText5" />
+            app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="180dp"
             android:layout_height="51dp"
             android:layout_marginStart="12dp"
-            android:background="#795548"
+            android:textSize="18dp"
+            android:textStyle="italic|bold"
+            android:background="@color/colorPrimaryDark"
+            android:textColor="#FDEFEDED"
             android:text="Delete Book"
-            android:textColor="@color/white"
-            android:textSize="19sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/button" />
 
