--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,6 @@
     tools:context=".MainActivity"
     tools:ignore="InvalidId">
 
-    <com.google.android.material.navigation.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@color/white"
-        app:headerLayout="@layout/header"
-        app:itemIconTint="@color/darkGray"
-        app:itemTextColor="@color/darkGray"
-        app:menu="@menu/drawermenu">
-
-    </com.google.android.material.navigation.NavigationView>
 
     <ScrollView
         android:layout_width="100dp"
@@ -198,5 +187,18 @@
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/white"
+        app:headerLayout="@layout/header"
+        app:itemIconTint="@color/darkGray"
+        app:itemTextColor="@color/darkGray"
+        app:menu="@menu/drawermenu">
+
+    </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
