--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -44,7 +44,7 @@
         android:layout_marginTop="60dp"
         android:hint="@string/n_payment_massege"
         android:justificationMode="inter_word"
-        android:textColorHint="@color/white"
+        android:textColorHint="#C9FFFFFF"
         android:textSize="17dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText1" />
@@ -72,10 +72,11 @@
         android:layout_height="51dp"
         android:layout_marginStart="124dp"
         android:layout_marginTop="52dp"
-        android:background="#DAC1B9BC"
+        android:background="#DAFFFFFF"
         android:onClick="sendBackToHome"
         android:text="Back to Photography booking"
-        android:textStyle="bold"
+        android:textColor="@color/colorPrimaryDark"
+        android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
