--- a/app/src/main/res/layout/activity_photography_booking.xml
+++ b/app/src/main/res/layout/activity_photography_booking.xml
@@ -1,32 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PhotographyBooking">
+    tools:context=".PhotographyBooking"
+    android:background="#2F2E0404"
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
+        android:id="@+id/textView13"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="96dp"
         android:autoSizeTextType="uniform"
-        android:hint="@string/n_photography_first_titls"
-        android:textColorHint="#000000"
+        android:text="Dog Photography"
+        android:textColor="#000000"
         android:textSize="28dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold" />
+
+    <androidx.cardview.widget.CardView
+        app:cardCornerRadius="6dp"
+        android:layout_margin="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="match_parent"
+            android:layout_height="800px"
+            app:srcCompat="@drawable/studio_dog" />
+
+    </androidx.cardview.widget.CardView>
+
 
     <Button
         android:id="@+id/button1"
         android:layout_width="246dp"
-        android:layout_height="59dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="15dp"
         android:layout_marginStart="96dp"
         android:onClick="sendToExtend"
         android:text="Extend/Cancel your Book"
+        android:background="@color/colorPrimaryDark"
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        android:textStyle="italic|bold"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10"
@@ -37,11 +60,18 @@
         android:layout_width="248dp"
         android:layout_height="60dp"
         android:layout_marginStart="96dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="264dp"
         android:onClick="sendToBook"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="15dp"
+        android:textStyle="italic|bold"
+        android:background="@color/white"
         android:text="Book again"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</LinearLayout>
