insert,update,cancel

--- a/app/src/main/res/layout/activity_driver_login_register.xml
+++ b/app/src/main/res/layout/activity_driver_login_register.xml
@@ -9,52 +9,58 @@
 
     <TextView
         android:id="@+id/driver_status"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_width="230dp"
+        android:layout_height="83dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="173dp"
-        android:background="#000000"
+        android:layout_marginStart="173dp"
+        android:layout_marginTop="197dp"
+        android:layout_marginBottom="451dp"
         android:text="Driver Login"
-        android:textAlignment="center"
-        android:textColor="@android:color/holo_green_dark"
-        android:textSize="20sp"
+        android:textColor="@color/blue"
+        android:textSize="30dp"
         android:textStyle="bold" />
 
     <EditText
         android:id="@+id/driver_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:ems="10"
-        android:hint="Email..."
-        android:inputType="textEmailAddress" />
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="280dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/input_design"
+        android:hint="Email"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/driver_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="Password..."
-        android:inputType="textPassword"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_below="@+id/driver_email"
-        android:layout_alignParentStart="true" />
-
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="340dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/input_design"
+        android:hint="Password"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:textSize="17sp"
+        android:textStyle="bold" />
     <Button
         android:id="@+id/login_driver_btn"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:background="@android:color/holo_orange_light"
-        android:backgroundTint="@color/colorAccent"
+        android:background="@drawable/buttons"
         android:text="Login"
         android:textAllCaps="false"
-        android:textColor="?attr/actionMenuTextColor"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         android:textSize="24sp"
         android:layout_marginTop="13dp"
         android:layout_below="@+id/driver_password"
@@ -83,7 +89,7 @@
         android:layout_below="@+id/driver_register_link"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="0dp"
-        android:background="@android:color/holo_red_light"
+        android:background="@drawable/buttons"
         android:text="Register"
         android:textColor="@android:color/background_light"
         android:textSize="20sp" />
