--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="darkGray">#6c6c6c</color>
     <color name="blue">#3700B3</color>
-    <color name="purple">#6200EE</color>
+    <color name="purple">#9400D3</color>
     <color name="black">#121111</color>
 </resources>
