--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -10,27 +10,43 @@
 
     <Button
         android:id="@+id/customer_welcome_btn"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="131dp"
-        android:background="@android:color/holo_red_dark"
-        android:text="Customer Login"
-        android:textAllCaps="false"
-        android:textColor="@android:color/background_light"
-        android:textSize="18sp"
+        android:layout_width="316dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/driver_welcome_btn" />
+        android:layout_centerInParent="true"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="150dp"
+        android:background="@drawable/input_design"
+        android:padding="20dp"
+        android:text="I'm a Customer"
+        android:textAllCaps="false"
+        android:textColor="#F7E61313"
+        android:textSize="36sp"
+        android:textStyle="bold"></Button>
 
     <Button
         android:id="@+id/driver_welcome_btn"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:background="@android:color/background_light"
-        android:text=" Driver Login"
-        android:textAllCaps="false"
-        android:textColor="@android:color/holo_red_dark"
-        android:textSize="18sp"
-        android:layout_above="@+id/customer_welcome_btn"
+        android:layout_width="325dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="11dp" />
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="255dp"
+        android:background="@drawable/buttons"
+        android:padding="20dp"
+        android:text="I'm a Driver"
+        android:textAllCaps="false"
+        android:textColor="#F7E61313"
+        android:textSize="36sp"
+        android:textStyle="bold"></Button>
 </RelativeLayout>
